istio/webapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment-v1
  labels: {app: webapp, version: v1}
spec:
  replicas: 1
  selector:
    matchLabels: {app: webapp, version: v1}
  template:
    metadata:
      labels: {app: webapp, version: v1}
    spec:
      containers:
        - name: webapp
          image: ghcr.io/remla23-team13/app:0.latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: webapp
spec:
  selector:
    app: webapp
  ports:
    - port: 3000
      targetPort: 3000
