istio/istio.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-istio-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-entry-service
spec:
  gateways:
    - my-istio-gateway
  hosts:
    - "*"
  http:
    - match:
      - uri:
          regex: /model-s-service/.*
      route:
        - destination:
            host: model-s
    - match:
      - uri:
          prefix: /
      route:
        - destination:
            host: webapp
