istio/model-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-deployment-v1
  labels: {app: model-deployment, version: v1}
spec:
  replicas: 1
  selector:
    matchLabels: {app: model-deployment, version: v1}
  template:
    metadata:
      labels: {app: model-deployment, version: v1}
    spec:
      containers:
        - name: model-deployment
          image: ghcr.io/remla23-team13/model-service:3.latest
          imagePullPolicy: Always
          ports:
            - name: model-s-port
              containerPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-deployment-v2
  labels: {app: model-deployment, version: v2}
spec:
  replicas: 1
  selector:
    matchLabels: {app: model-deployment, version: v2}
  template:
    metadata:
      labels: {app: model-deployment, version: v2}
    spec:
      containers:
        - name: model-deployment
          image: ghcr.io/remla23-team13/model-service:3.latest
          imagePullPolicy: Always
          ports:
            - name: model-port-v2
              containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: model-service
spec:
  type: NodePort
  selector:
    app: model-deployment
  ports:
    - name: http
      port: 8000
      targetPort: 8000
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: model-service-rule
spec:
  host: model-service
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
